RbA Build/src/objects/RbA_Work_Order__c.object
<CustomObject>
    <fields>
        <fullName>RRK_Checklist_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Required if Testing Result is Positive or Presumed</inlineHelpText>
        <label>RRK Checklist Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <inlineHelpText>This allows us to have better reporting and to see high level the reason the Work Order has moved into this status.</inlineHelpText>
        <label>Reason</label>
        <picklist>
            <controllingField>Work_Order_Status__c</controllingField>
            <picklistValues>
                <fullName>Customer on Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales to Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Age of home built after 1978</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Crew_Size__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This field displays how many people should be on a work order, regardless of type. When manually assigning a resource, scheduler will notify you if you have not met this number. Not recognized in the batch assign tool</inlineHelpText>
        <label>Preferred Headcount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renovate_Right_Booklet_Signed_Date__c</fullName>
        <formula>IF(ISBLANK(Update_Renovate_Right_Booklet_Signed__c), Sold_Order__r.Renovate_Right_Booklet_Signed_Date__c,
IF(Sold_Order__r.Renovate_Right_Booklet_Signed_Date__c &gt; Update_Renovate_Right_Booklet_Signed__c ,Sold_Order__r.Renovate_Right_Booklet_Signed_Date__c, Update_Renovate_Right_Booklet_Signed__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renovate Right Booklet Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_sent_to_Contractor__c</fullName>
        <label>Request sent to Contractor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_sent_to_Paint_Stain_Vendor__c</fullName>
        <inlineHelpText>The date the request was sent to vendor.</inlineHelpText>
        <label>Request sent to Paint/Stain Vendor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reschedule_Date__c</fullName>
        <label>Reschedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reschedule_Reason__c</fullName>
        <label>Reschedule Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Weather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Constraint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeowner Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Retail_Total__c</fullName>
        <formula>Sold_Order__r.Retail_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retail Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_Appt_Date_Time_Install__c</fullName>
        <description>Set by related WO Event, based on Service Type, reflects the StartDateTime. Unlike Original Appt Date/Time, this field updates should the Event be rescheduled.</description>
        <inlineHelpText>Set by related WO Event, based on Service Type, reflects the StartDateTime. Unlike Original Appt Date/Time, this field updates should the Event be rescheduled.</inlineHelpText>
        <label>Scheduled Appt Date/Time: Install</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Appt_Date_Time_Service__c</fullName>
        <description>Set by related WO Event, based on Service Type, reflects the StartDateTime. Unlike Original Appt Date/Time, this field updates should the Event be rescheduled.</description>
        <inlineHelpText>Set by related WO Event, based on Service Type, reflects the StartDateTime. Unlike Original Appt Date/Time, this field updates should the Event be rescheduled.</inlineHelpText>
        <label>Scheduled Appt Date/Time: Service</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Appt_Date_Time_Tech_Measure__c</fullName>
        <description>Set by related WO Event, based on Service Type, reflects the StartDateTime. Unlike Original Appt Date/Time, this field updates should the Event be rescheduled.</description>
        <inlineHelpText>Set by related WO Event, based on Service Type, reflects the StartDateTime. Unlike Original Appt Date/Time, this field updates should the Event be rescheduled.</inlineHelpText>
        <label>Scheduled Appt Date/Time: Tech Measure</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Appt_Date_Time__c</fullName>
        <formula>IF(NOT(ISBLANK(Appointment_Date__c)),
TEXT(MONTH(Appointment_Date__c))+
&quot;/&quot;+TEXT(DAY(Appointment_Date__c))+ 
&quot;/&quot;+TEXT(YEAR(Appointment_Date__c))+&quot; &quot;+TEXT(Appointment_Start_Time__c),
null)</formula>
        <label>Scheduled Appt Date/Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_As_Type__c</fullName>
        <description>This field is used by the scheduler to determine if a work order was scheduled for a different type technician.  Example: Service work order scheduled for a Tech Measure</description>
        <label>Scheduled As Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Install_Date_Formula__c</fullName>
        <description>For UI purposes, translates the Scheduled Appt Date/Time into a Date only field</description>
        <formula>DATEVALUE( Scheduled_Appt_Date_Time_Install__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For UI purposes, translates the Scheduled Appt Date/Time into a Date only field</inlineHelpText>
        <label>Scheduled Install Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Installation_Date__c</fullName>
        <formula>Sold_Order__r.Installation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date the Installation is Scheduled for.  Pulling from the Installation Work Order.</inlineHelpText>
        <label>Scheduled Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_To__c</fullName>
        <label>Sent To</label>
        <picklist>
            <picklistValues>
                <fullName>Homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Material_Owner_Id__c</fullName>
        <description>pulls in who the default Service Material Owner should be from the Store Config. Used when adding Service Tasks.</description>
        <formula>Account__r.Store_Location__r.Active_Store_Configuration__r.Service_Material_Owner__c</formula>
        <inlineHelpText>pulls in who the default Service Material Owner should be from the Store Config. Used when adding Service Tasks.</inlineHelpText>
        <label>Service Material Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <description>Indicates whether the related Service Request is Job In Progress</description>
        <formula>IF( (ISPICKVAL( Sold_Order__r.Service_Type__c,&quot;Job in Progress&quot;)),true, false)</formula>
        <inlineHelpText>Indicates whether the related Service Request is Job In Progress</inlineHelpText>
        <label>Service Request - JIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Sold_Order__r.Id , Sold_Order__r.OrderNumber)</formula>
        <label>Service Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Special_Details_from_Sales__c</fullName>
        <inlineHelpText>Special Notes from the Sales Rep</inlineHelpText>
        <label>Special Details from Sales</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>“State” part of the work order location</description>
        <inlineHelpText>“State” part of the work order location</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>“Street” part of the work order location</description>
        <inlineHelpText>“Street” part of the work order location</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Measure_Sync_Date_Time__c</fullName>
        <description>Used to ensure MA Scheduler is syncing events w/ WO</description>
        <inlineHelpText>Used to ensure MA Scheduler is syncing events w/ WO</inlineHelpText>
        <label>Tech Measure Sync Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tech_Measure_Synced__c</fullName>
        <description>If Tech Measure Sync Date/Time is populated then we know the WO and MA Scheduler are synced</description>
        <formula>NOT(ISBLANK( Tech_Measure_Sync_Date_Time__c ))</formula>
        <inlineHelpText>If Tech Measure Sync Date/Time is populated then we know the WO and MA Scheduler are synced</inlineHelpText>
        <label>Tech Measure Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Results__c</fullName>
        <inlineHelpText>Test Results</inlineHelpText>
        <label>Test Results</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presumed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>**MIGHT NEED TO FILTER TO THE RBA EMPLOYEE.

Name of the Person that completed the testing.</inlineHelpText>
        <label>Testing completed by?</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders (Testing completed by?)</relationshipLabel>
        <relationshipName>Work_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testing_documentation_sent_to_Customer__c</fullName>
        <inlineHelpText>Date the Testing Documentation was sent to the Customer.</inlineHelpText>
        <label>Testing documentation sent to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Labor_Cost__c</fullName>
        <label>Total Labor Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_image__c</fullName>
        <formula>CASE( Work_Order_Type__c, 
&quot;Tech Measure&quot;, IMAGE (&quot;resource/TechMeasureText&quot;,&quot;Tech Measure&quot;), 
&quot;Install&quot;, IMAGE(&quot;resource/InstallText&quot;,&quot;Install&quot;), 
&quot;Service&quot;, IMAGE(&quot;resource/ServiceText&quot;,&quot;Service&quot;),
&quot;HOA&quot;, IMAGE(&quot;resource/HOAText&quot;,&quot;HOA&quot;),
&quot;Historical&quot;, IMAGE(&quot;resource/HistoricalText&quot;,&quot;Historical&quot;),
&quot;Building Permit&quot;, IMAGE(&quot;resource/BuildingPermitText&quot;,&quot;Building Permit&quot;),
&quot;LSWP&quot;, IMAGE(&quot;resource/LSWP&quot;,&quot;LSWP&quot;),
&quot;Paint/Stain&quot;, IMAGE(&quot;resource/PaintStainText&quot;,&quot;Paint/Stain&quot;),
&quot;Collections&quot;, IMAGE(&quot;resource/CollectionsText&quot;,&quot;Collections&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Paint/Stain</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Renovate_Right_Booklet_Signed__c</fullName>
        <label>Update Renovate Right Booklet Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 3) AND 2</booleanFilter>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor Contacts</value>
            </filterItems>
            <filterItems>
                <field>$Source.Vendor__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Contractor Contacts</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Orders (LSWP)</relationshipLabel>
        <relationshipName>Work_Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <label>Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <formula>Vendor__r.Name</formula>
        <label>Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Vendor preforming the work.</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Contractor</value>
            </filterItems>
            <infoMessage>The Vendor must be associated with the Store the Order is associated to.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders (LSWP)</relationshipLabel>
        <relationshipName>Work_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id,&quot;View&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_Performed_Testing__c</fullName>
        <label>Who Performed Testing?</label>
        <picklist>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RbA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Who_Scheduled_Final_Inspection__c</fullName>
        <inlineHelpText>Who Scheduled Final Inspection?</inlineHelpText>
        <label>Who Scheduled Final Inspection</label>
        <picklist>
            <picklistValues>
                <fullName>Homeowner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RbA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Windows__c</fullName>
        <formula>Sold_Order__r.Windows_Rollup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Windows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order_Status__c</fullName>
        <description>Current status of the work order</description>
        <inlineHelpText>Current status of the work order</inlineHelpText>
        <label>Work Order Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait for Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Assignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled &amp; Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appt Complete / Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended / On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Order_Type__c</fullName>
        <description>Type of work order: HOA, Historical, LSWP, Building, Tech Measure, Install, Service. etc.</description>
        <inlineHelpText>Type of work order: HOA, Historical, LSWP, Building, Tech Measure, Install, Service. etc.</inlineHelpText>
        <label>Work Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tech Measure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Permit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paint/Stain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collections</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>“Zip code” part of the work order location</description>
        <inlineHelpText>“Zip code” part of the work order location</inlineHelpText>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>RbA Work Order</label>
    <listViews>
        <fullName>All_Installs</fullName>
        <columns>NAME</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Appointment_Duration__c</columns>
        <columns>Retail_Total__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RbA_Work_Order__c.Visit</value>
        </filters>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Install</value>
        </filters>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>equals</operation>
            <value>To be scheduled</value>
        </filters>
        <label>*Install  - To be Scheduled</label>
    </listViews>
    <listViews>
        <fullName>All_RbA</fullName>
        <columns>NAME</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>Work_Order_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Tech_Measures</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Appointment_Duration__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RbA_Work_Order__c.Visit</value>
        </filters>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Tech Measure</value>
        </filters>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>equals</operation>
            <value>To be scheduled</value>
        </filters>
        <label>*Tech Measure - To be Scheduled</label>
    </listViews>
    <listViews>
        <fullName>All_Work_Orders_RbA</fullName>
        <columns>NAME</columns>
        <columns>Type_image__c</columns>
        <columns>Work_Order_Type__c</columns>
        <columns>Municipality__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Work_Order_Status__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Work Orders</label>
    </listViews>
    <listViews>
        <fullName>Building_Permits_RbA</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Original_Appt_Date_Time_Install__c</columns>
        <columns>Work_Order_Status__c</columns>
        <columns>Inspection_Scheduled_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RbA_Work_Order__c.Permit</value>
        </filters>
        <label>Building Permits</label>
    </listViews>
    <listViews>
        <fullName>Demo_Install_To_be_Scheduled</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Appointment_Duration__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RbA_Work_Order__c.Visit</value>
        </filters>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Install</value>
        </filters>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>equals</operation>
            <value>To be scheduled</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MI,Michigan</value>
        </filters>
        <label>Demo Install-To be Scheduled</label>
    </listViews>
    <listViews>
        <fullName>Demo_Service_To_be_Scheduled</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Appointment_Duration__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RbA_Work_Order__c.Visit</value>
        </filters>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>equals</operation>
            <value>To be scheduled</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MI</value>
        </filters>
        <label>Demo Service-To be Scheduled</label>
    </listViews>
    <listViews>
        <fullName>Demo_Tech_Measure_Pending_Assignment</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Primary_Tech_Measure__c</columns>
        <columns>Appointment_Date__c</columns>
        <columns>Appointment_Duration__c</columns>
        <columns>Appointment_Start_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>equals</operation>
            <value>Pending Assignment</value>
        </filters>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Tech Measure</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MI</value>
        </filters>
        <label>Demo Tech Measure - Pending Assignment</label>
    </listViews>
    <listViews>
        <fullName>Demo_Tech_Measure_To_be_Scheduled</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Appointment_Duration__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RbA_Work_Order__c.Visit</value>
        </filters>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Tech Measure</value>
        </filters>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>equals</operation>
            <value>To be scheduled</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
            <value>MI</value>
        </filters>
        <filters>
            <field>Assigned_Resources__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Demo Tech Measure-To be Scheduled</label>
    </listViews>
    <listViews>
        <fullName>Draft_Orders_Twin_Cities_RbA_Work_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Draft Orders - Twin Cities</label>
        <queue>Draft_Orders_Twin_Cities</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HOA</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Municipality__c</columns>
        <columns>Work_Order_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>HOA</value>
        </filters>
        <label>HOA</label>
    </listViews>
    <listViews>
        <fullName>HOA_RbA</fullName>
        <columns>NAME</columns>
        <columns>Municipality__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>HOA</value>
        </filters>
        <label>HOA</label>
    </listViews>
    <listViews>
        <fullName>Install_Assigned_Not_Scheduled</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Appointment_Duration__c</columns>
        <columns>Primary_Installer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RbA_Work_Order__c.Visit</value>
        </filters>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Install</value>
        </filters>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>equals</operation>
            <value>To be scheduled</value>
        </filters>
        <filters>
            <field>Primary_Installer__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Install - Assigned, Not Scheduled</label>
    </listViews>
    <listViews>
        <fullName>Install_Scheduled_NOT_Confirmed</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Scheduled_Appt_Date_Time_Tech_Measure__c</columns>
        <columns>Confirmed_Appt_w_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RbA_Work_Order__c.Visit</value>
        </filters>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Install</value>
        </filters>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>equals</operation>
            <value>Scheduled &amp; Assigned</value>
        </filters>
        <filters>
            <field>Confirmed_Appt_w_Customer__c</field>
            <operation>equals</operation>
        </filters>
        <label>Install - Scheduled NOT Confirmed</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Install_Scheduled_Not_Assigned</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Appointment_Duration__c</columns>
        <columns>Appointment_Date__c</columns>
        <columns>Appointment_Start_Time__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RbA_Work_Order__c.Visit</value>
        </filters>
        <filters>
            <field>Work_Order_Type__c</field>
            <operation>equals</operation>
            <value>Install</value>
        </filters>
        <filters>
            <field>Work_Order_Status__c</field>
            <operation>equals</operation>
            <value>Pending Assignment</value>
        </filters>
        <label>*Install - Pending Assignment</label>
    </listViews>
    <nameField>
        <displayFormat>WO-{00000000}</displayFormat>
        <label>Work Order #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RbA Work Orders</pluralLabel>
    <recordTypes>
        <fullName>Actions</fullName>
        <active>true</active>
        <description>Holds HOA and Historical Details</description>
        <label>Actions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Collections</fullName>
        <active>true</active>
        <label>Collections</label>
    </recordTypes>
</CustomObject>